--- a/.github/workflows/pmtiles.yml
+++ b/.github/workflows/pmtiles.yml
@@ -1,36 +1,68 @@
-# This is a basic workflow to help you get started with Actions
+name: Convert and Deploy GeoJSON to PMTiles and FlatGeobuf
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+  schedule:
+    - cron: '0 0 * * *'  # 毎日 UTC 0時に実行
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  convert-and-deploy:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gdal-bin build-essential libsqlite3-dev zlib1g-dev
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Install Tippecanoe
+      run: |
+        git clone https://github.com/felt/tippecanoe.git
+        cd tippecanoe
+        make -j
+        sudo make install
+
+    - name: Download and Convert GeoJSONs
+      run: |
+        # Create directories if not exist
+        mkdir -p FlatGeobuf
+        mkdir -p PMTiles
+
+        # Download and convert each GeoJSON to FlatGeobuf
+        declare -A urls=(
+          ["unkohonsu2024_rosen_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_kukan.geojson"
+          ["unkohonsu2024_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan.geojson"
+          ["unkohonsu2024_kukan_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan_eki.geojson"
+          ["unkohonsu2024_rosen_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_eki.geojson"
+          ["unkohonsu2024_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_eki.geojson"
+        )
+        for key in "${!urls[@]}"; do
+          curl -o "$key.geojson" "${urls[$key]}"
+          ogr2ogr -f FlatGeobuf "FlatGeobuf/$key.fgb" "$key.geojson"
+        done
+
+    - name: Convert FlatGeobuf to PMTiles
+      run: |
+        # Convert each FlatGeobuf to PMTiles using specific tippecanoe commands
+        tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles FlatGeobuf/unkohonsu2024_rosen_kukan.fgb -pf -pk
+        tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles FlatGeobuf/unkohonsu2024_kukan.fgb -pf -pk
+        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_kukan_eki.fgb -r1 -pf -pk
+        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_rosen_eki.fgb -r1 -pf -pk
+        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_eki.fgb -r1 -pf -pk
+
+    - name: Commit and push changes
+      run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
+        git add FlatGeobuf PMTiles
+        git commit -m "Update GeoJSON, FlatGeobuf, and PMTiles files"
+        git push
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./PMTiles
