--- a/.github/workflows/pmtiles.yml
+++ b/.github/workflows/pmtiles.yml
@@ -2,7 +2,7 @@ name: Convert and Deploy GeoJSON to PMTiles and FlatGeobuf
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 毎日 UTC 0時に実行
+    - cron: "0 0 * * *" # 毎日 UTC 0時に実行
   workflow_dispatch:
 
 jobs:
@@ -10,59 +10,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y gdal-bin build-essential libsqlite3-dev zlib1g-dev
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gdal-bin build-essential libsqlite3-dev zlib1g-dev
 
-    - name: Install Tippecanoe
-      run: |
-        git clone https://github.com/felt/tippecanoe.git
-        cd tippecanoe
-        make -j
-        sudo make install
+      - name: Install Tippecanoe
+        run: |
+          git clone https://github.com/felt/tippecanoe.git
+          cd tippecanoe
+          make -j
+          sudo make install
 
-    - name: Download and Convert GeoJSONs
-      run: |
-        # Create directories if not exist
-        mkdir -p FlatGeobuf
-        mkdir -p PMTiles
+      - name: Download and Convert GeoJSONs
+        run: |
+          # Create directories if not exist
+          mkdir -p FlatGeobuf
+          mkdir -p PMTiles
 
-        # Download and convert each GeoJSON to FlatGeobuf
-        declare -A urls=(
-          ["unkohonsu2024_rosen_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_kukan.geojson"
-          ["unkohonsu2024_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan.geojson"
-          ["unkohonsu2024_kukan_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan_eki.geojson"
-          ["unkohonsu2024_rosen_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_eki.geojson"
-          ["unkohonsu2024_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_eki.geojson"
-        )
-        for key in "${!urls[@]}"; do
-          curl -o "$key.geojson" "${urls[$key]}"
-          ogr2ogr -f FlatGeobuf "FlatGeobuf/$key.fgb" "$key.geojson"
-        done
+          # Download and convert each GeoJSON to FlatGeobuf
+          declare -A urls=(
+            ["unkohonsu2024_rosen_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_kukan.geojson"
+            ["unkohonsu2024_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan.geojson"
+            ["unkohonsu2024_kukan_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan_eki.geojson"
+            ["unkohonsu2024_rosen_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_eki.geojson"
+            ["unkohonsu2024_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_eki.geojson"
+          )
+          for key in "${!urls[@]}"; do
+            curl -o "$key.geojson" "${urls[$key]}"
+            ogr2ogr -f FlatGeobuf "FlatGeobuf/$key.fgb" "$key.geojson"
+          done
 
-    - name: Convert FlatGeobuf to PMTiles
-      run: |
-        # Convert each FlatGeobuf to PMTiles using specific tippecanoe commands
-        tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles FlatGeobuf/unkohonsu2024_rosen_kukan.fgb -pf -pk
-        tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles FlatGeobuf/unkohonsu2024_kukan.fgb -pf -pk
-        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_kukan_eki.fgb -r1 -pf -pk
-        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_rosen_eki.fgb -r1 -pf -pk
-        tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles FlatGeobuf/unkohonsu2024_eki.fgb -r1 -pf -pk
+      - name: Convert FlatGeobuf to PMTiles
+        run: |
+          # Convert each FlatGeobuf to PMTiles using specific tippecanoe commands with the --force option
+          tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles --force FlatGeobuf/unkohonsu2024_rosen_kukan.fgb -pf -pk
+          tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles --force FlatGeobuf/unkohonsu2024_kukan.fgb -pf -pk
+          tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles --force FlatGeobuf/unkohonsu2024_kukan_eki.fgb -r1 -pf -pk
+          tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles --force FlatGeobuf/unkohonsu2024_rosen_eki.fgb -r1 -pf -pk
+          tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles --force FlatGeobuf/unkohonsu2024_eki.fgb -r1 -pf -pk
 
-    - name: Commit and push changes
-      run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Actions"
-        git add FlatGeobuf PMTiles
-        git commit -m "Update GeoJSON, FlatGeobuf, and PMTiles files"
-        git push
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add FlatGeobuf PMTiles
+          git commit -m "Update GeoJSON, FlatGeobuf, and PMTiles files"
+          git push
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./PMTiles
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./PMTiles
