--- a/.github/workflows/pmtiles.yml
+++ b/.github/workflows/pmtiles.yml
@@ -46,8 +46,8 @@ jobs:
             ["unkohonsu2023_eki"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2023_eki.geojson"
           )
           for key in "${!urls[@]}"; do
-            curl -o "$key.geojson" "${urls[$key]}"
-            ogr2ogr -f FlatGeobuf "FlatGeobuf/$key.fgb" "$key.geojson"
+            curl -o "GeoJSON/$key.geojson" "${urls[$key]}"
+            ogr2ogr -f FlatGeobuf "FlatGeobuf/$key.fgb" "GeoJSON/$key.geojson"
           done
 
       - name: Convert FlatGeobuf to PMTiles
@@ -68,7 +68,7 @@ jobs:
         run: |
           git config --local user.email "y.shiwaku.5519@gmail.com"
           git config --local user.name "shi-works"
-          git add FlatGeobuf PMTiles
+          git add FlatGeobuf PMTiles GeoJSON/
           git commit -m "Update GeoJSON, FlatGeobuf, and PMTiles files"
           git push
 
