--- a/.github/workflows/pmtiles.yml
+++ b/.github/workflows/pmtiles.yml
@@ -8,31 +8,19 @@ on:
 jobs:
   convert-and-deploy:
     runs-on: ubuntu-latest
+    container:
+      image: shiworks/tippecanoe-gdal:latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Setup directories and convert GeoJSONs
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gdal-bin build-essential libsqlite3-dev zlib1g-dev
-
-      - name: Install Tippecanoe
-        run: |
-          git clone https://github.com/felt/tippecanoe.git
-          cd tippecanoe
-          make -j
-          sudo make install
-
-      - name: Download and Convert GeoJSONs
-        run: |
-          # Create directories if not exist
           mkdir -p FlatGeobuf
           mkdir -p PMTiles
           mkdir -p GeoJSON
 
-          # Download and convert each GeoJSON to FlatGeobuf
           declare -A urls=(
             ["unkohonsu2024_rosen_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_rosen_kukan.geojson"
             ["unkohonsu2024_kukan"]="https://gtfs-gis.jp/railway_honsu/data/unkohonsu2024_kukan.geojson"
@@ -52,17 +40,10 @@ jobs:
 
       - name: Convert FlatGeobuf to PMTiles
         run: |
-          # Convert each FlatGeobuf to PMTiles using specific tippecanoe commands with the --force option
-          tippecanoe -o PMTiles/unkohonsu2024_rosen_kukan.pmtiles --force FlatGeobuf/unkohonsu2024_rosen_kukan.fgb -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2024_kukan.pmtiles --force FlatGeobuf/unkohonsu2024_kukan.fgb -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2024_kukan_eki.pmtiles --force FlatGeobuf/unkohonsu2024_kukan_eki.fgb -r1 -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2024_rosen_eki.pmtiles --force FlatGeobuf/unkohonsu2024_rosen_eki.fgb -r1 -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2024_eki.pmtiles --force FlatGeobuf/unkohonsu2024_eki.fgb -r1 -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2023_rosen_kukan.pmtiles --force FlatGeobuf/unkohonsu2023_rosen_kukan.fgb -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2023_kukan.pmtiles --force FlatGeobuf/unkohonsu2023_kukan.fgb -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2023_kukan_eki.pmtiles --force FlatGeobuf/unkohonsu2023_kukan_eki.fgb -r1 -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2023_rosen_eki.pmtiles --force FlatGeobuf/unkohonsu2023_rosen_eki.fgb -r1 -pf -pk
-          tippecanoe -o PMTiles/unkohonsu2023_eki.pmtiles --force FlatGeobuf/unkohonsu2023_eki.fgb -r1 -pf -pk
+          for f in FlatGeobuf/*.fgb; do
+            base=$(basename $f .fgb)
+            tippecanoe -o PMTiles/${base}.pmtiles --force $f -pf -pk
+          done
 
       - name: Commit and push changes
         run: |
