--- a/.github/workflows/pmtiles.yml
+++ b/.github/workflows/pmtiles.yml
@@ -63,9 +63,12 @@ jobs:
         run: |
           git config --local user.email "y.shiwaku.5519@gmail.com"
           git config --local user.name "shi-works"
-          git add FlatGeobuf PMTiles GeoJSON/
+          echo "tippecanoe/" >> .gitignore
+          git add .gitignore FlatGeobuf/ PMTiles/ GeoJSON/
+          git status  # 状態を確認
           git commit -m "Update GeoJSON, FlatGeobuf, and PMTiles files"
           git push
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
